k3s/dragonfly/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly
  namespace: dragonfly
spec:
  endpointSelector:
    matchLabels:
      app: dragonfly
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: affine
            app: affine
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authelia
            app: authelia
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
            app: immich-server
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
            app: immich-machine-learning
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: paperless
            app: paperless
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
